--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.0",
     "bcrypt-promise": "^2.0.0",
     "body-parser": "~1.18.2",
+    "clean-deep": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~3.1.0",
