--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "mongoose-slug-updater": "^3.1.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "mysql2": "^1.5.1",
     "nodemailer": "^4.6.8",
     "parse-error": "^0.2.0",
     "parse-strings-in-object": "^2.0.0",
@@ -32,16 +31,25 @@
     "passport-jwt": "^4.0.0",
     "rand-token": "^0.4.0",
     "rc": "^1.2.8",
-    "sequelize": "^4.38.0",
     "serve-favicon": "~2.5.0",
+    "shortid": "^2.2.15",
     "validator": "^10.7.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "app-root-path": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^1.19.4",
     "sequelize-auto": "^0.4.29",
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^4.1.1",
+    "triple-beam": "^1.3.0",
     "typescript": "^3.3.3"
   }
 }
