--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.8.1",
     "mongoose-slug-updater": "^3.1.4",
     "morgan": "^1.9.1",
+    "mysql2": "^1.5.1",
     "multer": "^1.4.2",
     "nodemailer": "^4.6.8",
     "parse-error": "^0.2.0",
