--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "await-to-js": "^2.0.1",
     "bcrypt": "^3.0.0",
     "bcrypt-promise": "^2.0.0",
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "clean-deep": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -23,8 +23,8 @@
     "mongoose": "^5.8.1",
     "mongoose-slug-updater": "^3.1.4",
     "morgan": "^1.9.1",
-    "mysql2": "^1.5.1",
     "multer": "^1.4.2",
+    "mysql2": "^1.5.1",
     "nodemailer": "^4.6.8",
     "parse-error": "^0.2.0",
     "parse-strings-in-object": "^2.0.0",
