--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.0",
     "rand-token": "^0.4.0",
     "rc": "^1.2.8",
+    "sequelize-slugify": "^0.9.1",
     "serve-favicon": "~2.5.0",
     "shortid": "^2.2.15",
     "validator": "^10.7.1",
