--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "parse-strings-in-object": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "query-string": "^6.10.1",
     "rand-token": "^0.4.0",
     "rc": "^1.2.8",
     "serve-favicon": "~2.5.0",
