--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "multer": "^1.4.2",
     "mysql2": "^1.5.1",
     "nodemailer": "^4.6.8",
+    "nodemon": "^2.0.2",
+    "object.fromentries": "^2.0.2",
     "parse-error": "^0.2.0",
     "parse-strings-in-object": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "qs": "^6.9.1",
     "query-string": "^6.10.1",
     "rand-token": "^0.4.0",
     "rc": "^1.2.8",
@@ -48,7 +51,6 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^1.19.4",
     "sequelize-auto": "^0.4.29",
     "sequelize-auto-migrations": "^1.0.2",
     "sequelize-cli": "^4.1.1",
