--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "clean-deep": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "crypto-random-string": "^3.1.0",
     "debug": "~3.1.0",
     "dotenv": "^6.0.0",
     "express": "~4.16.3",
     "express-fileupload": "^1.1.1-alpha.2",
     "gm": "^1.23.1",
+    "is-empty": "^1.2.0",
     "jsonschema": "^1.2.4",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.8.1",
     "mongoose-slug-updater": "^3.1.4",
