--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^1.5.1",
     "nodemailer": "^4.6.8",
     "nodemon": "^2.0.2",
+    "object-assign-async": "^1.0.0",
     "object.fromentries": "^2.0.2",
     "parse-error": "^0.2.0",
     "parse-strings-in-object": "^2.0.0",
