--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.8.1",
+    "mongoose-delete": "^0.5.1",
     "mongoose-slug-updater": "^3.1.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
