--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clean-deep": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "crypto-random-string": "^3.1.0",
     "debug": "~3.1.0",
     "dotenv": "^6.0.0",
