--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-promise": "^2.0.0",
     "body-parser": "^1.18.3",
     "clean-deep": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "crypto-random-string": "^3.1.0",
