metchant settings; auth transaction; order mail

--- a/example.env
+++ b/example.env
@@ -12,3 +12,6 @@ MONGODB_URI=mongodb://167.114.115.100:27017/?gssapiServiceName=mongodb
 
 JWT_ENCRYPTION=ABCDEFGH
 JWT_EXPIRATION=10000
+
+SMS_API_KEY=CGMc2zcPYT1zroet
+SMS_SENDER_ID=KICKIL
