--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "crypto-random-string": "^3.1.0",
+    "date-fns": "^2.14.0",
     "debug": "~3.1.0",
     "dotenv": "^6.0.0",
     "express": "~4.16.3",
@@ -30,6 +31,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.5.1",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^2.0.2",
     "object-assign-async": "^1.0.0",
