--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mongoose": "^5.8.1",
+    "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.1",
     "mongoose-slug-updater": "^3.1.4",
     "morgan": "^1.9.1",
@@ -49,7 +49,9 @@
     "serve-favicon": "~2.5.0",
     "shortid": "^2.2.15",
     "validator": "^10.7.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xlsx": "^0.16.2",
+    "xlsx-to-json-lc": "^0.5.0"
   },
   "devDependencies": {
     "app-root-path": "^3.0.0",
